tests/syntax_error/dotdotdot_dotdotdot_funcptr.jou
def foo() -> None:
    f: funcptr(..., ...) -> None  # Error: if '...' is used, it must be the last parameter
